added a image of a house and a few more elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hei, eg er ei stor overskrift</h1>
-<p>Hei, eg er ein paragraf</p>
-<a href="https://google.com" target="_blank" title="google neste">Trykk her!</a>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>test sida</title>
+    </head>
+    <body>
+        <h1>Hei, eg er ei stor overskrift</h1>
+        <p>Hei, eg er ein <b>paragraf</b></p>
+        <a href="https://google.com" target="_blank" title="google neste">Trykk her!</a>
+        <p>Mitt namn er: <br>
+        Fjøsna</p>
+        <img src="1.jpg">
+    </body>
+</html>
