endra teksten ang. huset

--- a/test.html
+++ b/test.html
@@ -7,8 +7,8 @@
         <h1>Hei, eg er ei stor overskrift</h1>
         <p>Hei, eg er ein <b>paragraf</b></p>
         <a href="https://google.com" target="_blank" title="google neste">Trykk her!</a>
-        <p>Mitt namn er: <br>
-        Fjøsna</p>
+        <p>Dette huset er plassert på: <br>
+        Fjøsna i Etne</p>
         <img src="1.jpg">
     </body>
 </html>
